force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/CHANNEL_ORDERS__COA_BatchConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting contains the configurations used by COA batch jobs.</description>
    <label>COA Batch Configuration</label>
</CustomObject>