force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/fields/CHANNEL_ORDERS__Alert_Email__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Alert_Email__c</fullName>
    <defaultValue>&quot;coa-notification@salesforce.com&quot;</defaultValue>
    <description>Email where errors will be sent if some errors happen in the batch jobs.</description>
    <label>Alert Email</label>
    <type>Email</type>
</CustomField>