force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/fields/CHANNEL_ORDERS__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The batch size to use when executing the batch via the scheduler.</description>
    <inlineHelpText>The batch size to use when executing the batch via the scheduler.</inlineHelpText>
    <label>Batch Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>