force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/fields/CHANNEL_ORDERS__Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Cron_Expression__c</fullName>
    <defaultValue>&quot;0 0 * * * ?&quot;</defaultValue>
    <description>Cron Expression used for rescheduling batch jobs.</description>
    <label>Cron Expression</label>
    <length>18</length>
    <type>Text</type>
</CustomField>