force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/fields/CHANNEL_ORDERS__Current_Retries__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Current_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If needed, re-tries will be made when callouts to org62 timeout.  This is the current number, which will not exceed the max defined in Max Retries.</description>
    <inlineHelpText>If needed, re-tries will be made when callouts to org62 timeout.  This is the current number, which will not exceed the max defined in Max Retries.</inlineHelpText>
    <label>Current Retries</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>