force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/fields/CHANNEL_ORDERS__Last_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Last_Start_Date__c</fullName>
    <description>This is the date and time when the first in a chain of batches was executed.</description>
    <inlineHelpText>This is the date and time when the first in a chain of batches was executed.</inlineHelpText>
    <label>Last Start Date</label>
    <type>DateTime</type>
</CustomField>