force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/fields/CHANNEL_ORDERS__Last_Success_Date__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Last_Success_Date__c</fullName>
    <description>This is the timestamp of the completion date for the last successful execution of the batch job.</description>
    <inlineHelpText>This is the timestamp of the completion date for the last successful execution of the batch job.</inlineHelpText>
    <label>Last Success Date</label>
    <type>DateTime</type>
</CustomField>