force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/fields/CHANNEL_ORDERS__Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Max_Retries__c</fullName>
    <defaultValue>5</defaultValue>
    <description>If needed, re-tries will be made when callouts to org62 timeout. Re-tries attempts will not exceed this max.</description>
    <inlineHelpText>If needed, re-tries will be made when callouts to org62 timeout. Re-tries attempts will not exceed this max.</inlineHelpText>
    <label>Max Retries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>