force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/fields/CHANNEL_ORDERS__Query_Size__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Query_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Query Size</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>