force-app/main/default/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c/fields/CHANNEL_ORDERS__Start_Order_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Start_Order_Product_Id__c</fullName>
    <label>Start Order ProductId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>